--- a/karate_test_api_functionalities/build.gradle
+++ b/karate_test_api_functionalities/build.gradle
@@ -5,15 +5,30 @@ plugins {
 group = 'org.example'
 version = '1.0-SNAPSHOT'
 
+ext {
+    karateVersion = '1.4.0'
+    cucumberReportVersion = '5.7.6'
+}
+
 repositories {
     mavenCentral()
 }
 
+
+
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation "com.intuit.karate:karate-junit5:${karateVersion}"
+    testImplementation "net.masterthought:cucumber-reporting:${cucumberReportVersion}"
 }
 
 test {
     useJUnitPlatform()
+    systemProperty "karate.options", System.properties.getProperty("karate.options")
+    systemProperty "karate.env", System.properties.getProperty("karate.env")
+    outputs.upToDateWhen { false }
+}
+
+task karateDebug(type: JavaExec) {
+    classpath = sourceSets.test.runtimeClasspath
+    main = 'com.intuit.karate.cli.Main'
 }
